@@ -1,3 +1,7 @@
+2009-09-16  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/alignment9.adb: New test.
+
 2009-09-16  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
